# well_typification_latent

./: .gitignore  Makefile  README.md  draw_architectures.py  draw_system_architecture.py  draw_window_processing.py  main.py  pyproject.toml
models/: models.py
models/ecn/: labels.npy  latents.npy
src/: config.py  utils.py
src/dashboard/: __init__.py  app.py  components.py
src/dashboard/assets/: dashboard.css
src/streaming/: __init__.py  emulator.py  processor.py  storage.py
training/: autoencoder.ipynb  clustering.ipynb  eda.ipynb  experiments.ipynb  pipeline.ipynb  training.ipynb  validation.ipynb
