[tool.poetry]
name = "well_typification_latent"
version = "0.1.0"
description = "Типизация режимов нефтяных скважин"
authors = ["Aslan Alibekov"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
numpy = "^2.4.2"
pandas = "^3.0.0"
torch = { version = "2.6.0+cu124", source = "pytorch-cu124" }
torchvision = { version = "0.21.0+cu124", source = "pytorch-cu124" }
torchaudio = { version = "2.6.0+cu124", source = "pytorch-cu124" }
scikit-learn = "^1.8.0"
dash = "^4.0.0"
plotly = "^6.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^1.19.1"
pandas-stubs = "3.0.0.260204"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
extraPaths = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "plotly.*", "dash.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
